--- a/client/app/views/layouts/_nav.html.haml
+++ b/client/app/views/layouts/_nav.html.haml
@@ -5,13 +5,11 @@
     %li
       =link_to 'Pages', page_path(1)
     %li
-      =link_to 'Blog', {:controller => 'blog'}
+      =link_to 'Blog', "#"
     %li
-      =link_to 'Events', calendar_path
+      =link_to 'Events', "#"
     %li
-      =link_to 'Forum', {:controller => 'Forum'}
-    %li
-      =link_to 'Group', {:controller => 'group', :action => 'show', :id=> 5}
+      =link_to 'Forum', "#"
   
   #search_box
     %form{ :action => "/search/results", :method => "post" }
