--- a/client/app/views/layouts/_header.html.haml
+++ b/client/app/views/layouts/_header.html.haml
@@ -1,11 +1,31 @@
-%h1#site_logo
-  = link_to 'The Green Machine', :home
-#user_links
-  - if logged_in?
-    = link_to 'Logout', session_path, :method => :delete
-    =link_if_allowed 'Admin', admin_proc
-    %strong
-      =link_to_self(@logged_in_member)
-  - else
-    %p
-      = link_to 'login', '#', :id => 'member_login_bttn' unless current_page?(new_session_path)
+.row
+  .twelvecol.no_padding
+    =render_flash
+  .threecol
+    -if is_home?
+      %h1#site_logo
+        =link_to "Vanilla", root_path, :id=>"site_logo_link"
+    -else
+      =link_to "Vanilla", root_path, :id=>"site_logo_link"
+  #header_right.ninecol.last 
+    -if logged_in?
+      .panel
+        .logged_in_as
+          =link_to(@logged_in_member, "#", :class=>'logged_in_member_link')
+          =#link_to "Notifications#{current_page?(notifications_path) || @logged_in_member.notifications.unread.empty? ? "" : " <span>#{@logged_in_member.notifications.unread.count}</span>"}", notifications_path, :class => "notifications", :title => "#{pluralize(@logged_in_member.notifications.unread.count, 'new notification')}"
+          =#link_to "Inbox#{current_page?(messages_path) || !@logged_in_member.has_unread_messages? ? "" : " <span>#{@logged_in_member.unread_message_count}</span>"}", messages_path, :class => "messages", :title => "#{pluralize(@logged_in_member.unread_message_count, 'new messages')}"
+          =link_to('My profile', @logged_in_member, :class=>'profile_link')
+          =link_if_allowed('Admin', admin_proc)
+          
+    -else
+      %a{ :href => "#login_popup", :id=>'login_link', :class=>'button' }
+        Log in
+      =link_to("Signup", new_member_path, :class => 'button')
+
+    -if logged_in?
+      .logged_in_box
+        -link_to @logged_in_member, :class=>'my_profile_link' do
+          =image_for @logged_in_member, '50x50#'
+          %p My profile
+        =link_if_allowed "Account settings", edit_member_proc(@logged_in_member)
+        =link_to('Logout', session_path, :method => :delete)
