--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -1,24 +1,47 @@
-#footer_links
-  %p#copyright
-    %strong
-      \&copy; 2010 The Green Machine
-    %br
-    Electric Works
-    %br
-    Sheffield Digital Campus
-    %br
-    Sheffield
-    %br
-    S1 2BJ
-    
-  =link_to("site by", "http://www.yoomee.com", :id => "siteby")
-  %ul
-    - if admin_logged_in?
-      %li
-        -link_to(admin_path) do
-          %strong
-            admin
-    %li
-      =link_to("legal", "#")
-    %li
-      =link_to("another link", "#")
+#footer.container
+  .row
+    .fourcol
+      %p#copyright
+        %strong
+          \&copy; 2010 The Green Machine
+        %br
+        Electric Works
+        %br
+        Sheffield Digital Campus
+        %br
+        Sheffield
+        %br
+        S1 2BJ
+    .fourcol
+      %ul
+        - if admin_logged_in?
+          %li
+            -link_to(admin_path) do
+              %strong
+                admin
+        %li
+          =link_to("legal", "#")
+        %li
+          =link_to("another link", "#")
+        %li
+          =link_to("Site map", "/sections")          
+    .fourcol.last      
+      =link_to("site by", "http://www.yoomee.com", :id => "siteby")
+
+%div{:style=>"display:none"}
+  #login_popup
+    %h2
+      Member Log in
+    - form_tag session_url do
+      #login_form
+        %p.login_email
+          %label{ :for => "login_email" }
+            Email/Username:
+          = text_field_tag 'login_email_or_username', @login_email_or_username
+          = star
+        %p.password
+          %label{ :for => "login_password" }
+            Password:
+          = password_field_tag 'login_password'
+          = star
+        = submit_tag 'Log in', :id => 'login_bttn'      
