--- a/client/app/views/layouts/application.html.haml
+++ b/client/app/views/layouts/application.html.haml
@@ -13,38 +13,56 @@
     %meta{ :content => "text/html; charset=utf-8", "http-equiv" => "Content-Type" }
     %meta{ :name => "info", :content => "#{page_title}#{page_subtitle}" }
     %link{ :href => "/images/favicon.ico", :rel => "shortcut icon" }
+    %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }
     = google_javascripts :jquery, :jqueryui
-    = javascript_include_tag 'jrails'
-    = javascript_include_tag 'jquery.cycle'
-    = javascript_include_tag 'tramlines'
-    
-    = stylesheet_link_tag 'client/styles'
-    = stylesheet_link_tag 'jquery-ui'
-    = formtastic_stylesheet_link_tag
+    = javascript_include_tag 'jrails', 'jquery.cycle', 'tramlines', 'client/tramlines', 'jquery.labelify', 'jquery.fancy_box/jquery.fancybox-1.3.1.pack', 'jquery.fancy_box/jquery.mousewheel-3.0.2.pack.js', 'client/load_fancybox', "jquery.autogrowtextarea.js", "client/like_form", "css3-mediaqueries", :cache => true
+    =javascript_include_tag 'jquery.fancy_box/jquery.easing-1.3.pack.js'
+    =# stylesheet_link_tag 'http://fast.fonts.com/cssapi/f1269106-f262-440b-b3ce-93423b2eaf06.css'
+    = stylesheet_link_tag "client/facelist_2-0",'jquery.fancybox', 'jquery-ui', 'client/1140.css', 'client/styles.css', 'client/mobile.css', :cache => false
+    /[if IE]
+      = stylesheet_link_tag 'client/ie.css'
+    /[if IE 6]
+      = stylesheet_link_tag 'client/ie6.css'
+    =# formtastic_stylesheet_link_tag
+    = labelify_javascript
     =yield :head
-    -unless current_page?(new_session_path)
-      :javascript
-        $(document).ready(function(){    
-          $("#member_login_bttn").click(function () {
-            $("#login_slide_bar").slideToggle("slow");
-            $("#member_login_bttn").toggleClass("open");
-          });
+    :javascript
+      $(document).ready(function() {
+        $("a.logged_in_member_link").click(function () {
+          if($(this).hasClass('logged_in_member_link_highlight')){
+            $('.logged_in_box').hide(0, function(){$('a.logged_in_member_link').removeClass("logged_in_member_link_highlight");});
+          } else {          
+            $('.logged_in_box').show();
+            $(this).addClass("logged_in_member_link_highlight");
+          }
         });
+        $("a#login_link").fancybox({
+        		'hideOnContentClick': false
+        });
+      });
+
+    =google_analytics_js
   - body_tag do
-    #top
-      =render :partial => 'layouts/nav'
-    -unless current_page?(new_session_path)
-      #login_slide_bar
-        #login_slide_bar_inside
-          =render :partial=>'sessions/form'
     #wrapper
-      #header
+      #header.container
         =render :partial => 'layouts/header'
+      #subheader.container
+        #nav_line.row
+          .ninecol
+            =render("layouts/nav")
+          #search_box.threecol.last
+            -unless controller_name == 'search'
+              -form_for Search.new do |form|
+                =form.submit "Search", :id => "search_icon"  
+                =form.text_field :term, :title => "Search..."      , :class => "labelify", :id => "search_field" 
+                
+        =#render("layouts/subnav")
       #main.content
-        =render_flash
-        -unless hide_page_title?
-          %h1#page_title=page_title
-        = @content_for_layout
-        %br.clear
-      #footer
-        =render :partial => 'layouts/footer'
+        #main_container.container 
+          -unless hide_page_title?
+            .row
+              .twelvecol                
+                %h1#page_title=page_title
+          =content_for_layout
+      =render :partial => 'layouts/footer'
+    %div{:id => "fb-root"}        
