UPdated the look and feel

--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -3,7 +3,8 @@
     .fourcol
       %p#copyright
         %strong
-          \&copy; 2010 The Green Machine
+          \&copy; 2011 
+          ="#{site_name}"
         %br
         Electric Works
         %br
