--- a/client/public/stylesheets/styles.css
+++ b/client/public/stylesheets/styles.css
@@ -27,7 +27,7 @@ body, textarea, input {font:12px/1.6 'Helvetica', Arial,'Liberation Sans',FreeSa
 	-o-border-radius:3px;
 	
 }
-a, p.inline-errors, .formError, #site_logo_link:hover {
+a, p.inline-errors, .formError {
 	color:#5fcec8;
 
 }
@@ -1090,10 +1090,12 @@ h1#page_title {
 	
 	font-family: 'Pacifico', serif;
 	display: block;
-	width: 150px;
-
 	font-size: 45px;
 	color: black;
+	text-indent: -9000em;
+	width: 100%;
+	height: 50px;
+	background: url(/images/sprite.png) no-repeat -120px -55px;
 	text-decoration: none;
 	margin:20px 0 0px 0;
 
