Basic views- subnav and making work like vcorp site

--- a/client/app/views/layouts/_footer.html.haml
+++ b/client/app/views/layouts/_footer.html.haml
@@ -27,7 +27,8 @@
         %li
           =link_to("Site map", "/sections")          
     .fourcol.last      
-      =link_to("site by", "http://www.yoomee.com", :id => "siteby")
+      =link_to("site by <span>Yoomee</span>", "http://www.yoomee.com", :id => "siteby")
+      
 
 %div{:style=>"display:none"}
   #login_popup
