Change to subnav

--- a/client/app/views/layouts/application.html.haml
+++ b/client/app/views/layouts/application.html.haml
@@ -55,11 +55,11 @@
               -form_for Search.new do |form|
                 =form.submit "Search", :id => "search_icon"  
                 =form.text_field :term, :title => "Search..."      , :class => "labelify", :id => "search_field" 
-        .row        
-          .twelvecol
-            =render_subnav(1)
-          .twelvecol
-            =render_subnav(2)
+        .row
+          -if controller_name == 'sections'
+            =render_subnav(current_section.parent)
+          -else
+            =render_subnav
             
       #main.content
         #main_container.container 
