styled sections index view

--- a/client/app/views/sections/show.html.haml
+++ b/client/app/views/sections/show.html.haml
@@ -4,13 +4,14 @@
   .row
     %p.section_description
       =@section.description
+#index_view.row      
 #blog_like_news_view.row
   -@pages_sections.each_with_col_name do |page_section, col_name|
-    .blog_like_news{:class => "item_#{col_name}"}
-      .blog_like_news_img.threecol  
+    .item.threecol{:class => "item_#{col_name}"}
+      .blog_like_news_img
         -if page_section.has_photo?
           =link_to(photo_for(page_section, '300x240!'), page_section)
-      .blog_like_news_content.sixcol.last   
+      .blog_like_news_content  
         %h2.blog_like_news_title
           =link_to_self(page_section,:class=>'newsbox_title_link')
         %p.blog_like_news_date
@@ -18,8 +19,7 @@
         %p.blog_like_news_text
           =page_section.is_a?(Page) ? (page_section.intro.blank? ? truncate(page_section.text.strip_tags, :length => 300) : page_section.intro) : page_section.description
         %p.blog_like_read_more
-          =link_to "Read more", page_section, :class=>'blog_read_more'
-    .blog_like_news_line.ninecol      
+          =link_to "Read more", page_section, :class=>'blog_read_more'  
 .row
   .twelvecol      
     =will_paginate @pages_sections
